--- a/css/styles.css
+++ b/css/styles.css
@@ -14,168 +14,189 @@ img {
 
 .container {
   width: 1280px;
-  margin: 0 auto;
-  padding: 20px;
+  margin-inline: auto;
+  padding-inline: 20px;
 }
 
 .heding {
-  background: #282829;
+  background-color: #282829;
 }
 
 .heding-box {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+  padding-block: 15px;
+}
+
+.list-unstyled {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .nav-list {
   display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 .nav-item {
   margin-right: 30px;
 }
 
-.nav-item-link {
-  margin-right: 0;
+.item {
+  margin: 0;
 }
 
 .nav-link {
   color: #fff;
   font-size: 18px;
   text-decoration-line: none;
-  font-style: normal;
   font-weight: 500;
   line-height: normal;
 }
 
+.nav-link:hover {
+  color: #f78b3b;
+}
+
+.nav-link:active {
+  opacity: 0.8;
+}
+
+.hero-section {
+  padding-block: 50px;
+}
+
+.hero {
+  background-image: url(../images/forest.png);
+  width: 1240px;
+  height: 420px;
+}
+
 .hero-box {
   width: 743px;
-  margin-inline: auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.hero-title {
-  font-size: 88px;
+.hero-title { 
+  color: #fff;
   text-align: center;
+  margin-block: 0;
+  padding-block: 117px;
+  font-size: 88px;
   line-height: 93px;
-}
-
-.servic {
-  margin-top: 50px;
 }
 
 .servic-list {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  flex-wrap: wrap;
 }
 
-.servis-item {
+.servic-item {
   width: 393px;
-  text-align: center;
   margin-bottom: 60px;
 }
 
-.servic-img {
-  margin-bottom: 30px;
-}
-
 .servic-title {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px; 
   font-size: 28px;
   line-height: normal;
 }
 
 .servic-text {
   color: #0009;
+  text-align: center;
+  margin: 0;
   font-size: 14px;
   line-height: 23px;
 }
 
-.section-language {
-  margin-top: 17px;
-}
-
-.language-img {
-  margin-bottom: 43px;
+.language-section {
+  margin-top: 15px;
 }
 
 .language-time {
   display: block;
   text-align: center;
-  margin-bottom: 4px;
+  margin-top: 43px; 
   font-family: "Open Sans";
   font-size: 18px;
   font-weight: 400;
   line-height: 32px;
 }
 
-.language-box {
-  width: 1098px;
-}
-
 .language-title {
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 20px;
   font-family: "Open Sans";
   font-size: 36px;
-  line-height: 50px;
+  margin-top: 4px;
+  margin-bottom: 20px;
+  text-align: center;
+  line-height: 50px; 
 }
 
 .language-text {
   text-align: center;
   font-family: "Open Sans";
   font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
   line-height: 32px;
 }
 
 .site-footer {
   background-color: #282829;
-  margin-top: 75px;
 }
 
 .footer-box {
-  padding: 81px 435px 80px 434px;
+  padding-block: 81px;
 }
 
 .footer-list {
   display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  justify-content: center;
 }
 
 .footer-item {
   margin-right: 56px;
 }
 
+.item-link {
+  margin: 0;
+}
+
 .footer-link {
   color: #fff;
   font-size: 16px;
-  font-weight: 400;
   text-decoration-line: none;
+  font-weight: 400;
   line-height: normal;
 }
 
-.footer-logo {
-  margin-top: 28px;
-  justify-content: center;
+.footer-link:hover {
+  color: #f00;
 }
 
-.footerlogo-item {
+.footer-link:active {
+  opacity: 0.8;
+}
+
+.footer-logo {
+  display: flex;
+  justify-content: center;
+  margin-block: 27px;
+}
+
+.footer-item-logo {
   margin-right: 26px;
-  margin-bottom: 27px;
 }
 
 .footer-span {
   display: block;
-  color: #fff9;
+  color: #ffffff99;
   text-align: center;
   font-size: 12px;
   font-weight: 400;
